WIP: Fix warnings in test-provider
Fix deprecation warnings by converting the final code bits to use
uint types/BindingMap and apply @Deprecated as appropriate.

Change-Id: Id144002ad80503fa3eeb3c0fbb73fe5490aea9e3
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>